tdf#101464: Make assert in accmap.cxx sensible

Original assert failed when code was working correctly.
Event list/map have to exist, and must be empty before
deletion (I assume).

Change-Id: Ieb84c925b3a350d834af1eab456b83a1961561ac